...
        <Spacer modifiers={[heightModifier(16)]} />
        <AppTextField
          value={body}
          onChangeText={handleChangeBody}
          label={t('debug.smsCodeTest.inputLabel')}
          fullWidth
          testID="sms-code-test-input"
        />
        <Spacer modifiers={[heightModifier(16)]} />
        {resultText !== null ? (
          <ComposeText modifiers={[testIDModifier('sms-code-test-result')]}>
            {resultText}
          </ComposeText>
...
