...
        "apps": "Apps",
        "search": "Search",
        "accessHeader": "Allow UniClip to Access",
        "pasteFromOtherApps": "Paste from Other Apps",
        "ask": "Ask",
        "deny": "Deny",
        "allow": "Allow"
      }
    }
  }
}

